@@ -2,7 +2,7 @@ from xml.dom.minidom import parseString
 
 from zope.app import zapi
 
-from Products.CMFCore.utils import getToolByName
+from zope.component import getUtility, queryUtility
 
 from Products.GenericSetup.interfaces import INode
 from Products.GenericSetup.interfaces import IBody
@@ -11,13 +11,13 @@ from Products.GenericSetup.utils import I18NURI
 from Products.GenericSetup.utils import XMLAdapterBase
 
 
-def importResRegistry(context, reg_id, reg_title, filename):
+def importResRegistry(context, reg_interface, reg_title, filename):
     """
     Import resource registry.
     """
     site = context.getSite()
     logger = context.getLogger('resourceregistry')
-    res_reg = getToolByName(site, reg_id)
+    res_reg = getUtility(reg_interface)
 
     body = context.readDataFile(filename)
     if body is None:
@@ -32,13 +32,13 @@ def importResRegistry(context, reg_id, reg_title, filename):
     importer.body = body
     logger.info("%s imported." % reg_title)
 
-def exportResRegistry(context, reg_id, reg_title, filename):
+def exportResRegistry(context, reg_interface, reg_title, filename):
     """
     Export resource registry.
     """
     site = context.getSite()
     logger = context.getLogger('resourceregistry')
-    res_reg = getToolByName(site, reg_id, None)
+    res_reg = queryUtility(reg_interface)
     if res_reg is None:
         logger.info("%s: Nothing to export." % reg_title)
         return
@@ -71,7 +71,7 @@ class ResourceRegistryNodeAdapter(XMLAdapterBase):
         Import the object from the DOM node.
         """
         if self.environ.shouldPurge():
-            registry = getToolByName(self.context, self.registry_id)
+            registry = getUtility(self.__used_for__)
             registry.clearResources()
 
         self._initResources(node)
@@ -81,7 +81,7 @@ class ResourceRegistryNodeAdapter(XMLAdapterBase):
         Extract the information for each of the registered resources.
         """
         fragment = self._doc.createDocumentFragment()
-        registry = getToolByName(self.context, self.registry_id)
+        registry = getUtility(self.__used_for__)
         resources = registry.getResources()
         for resource in resources:
             data = resource._data.copy()
@@ -98,7 +98,7 @@ class ResourceRegistryNodeAdapter(XMLAdapterBase):
         Initialize the registered resources based on the contents of
         the provided DOM node.
         """
-        registry = getToolByName(self.context, self.registry_id)
+        registry = getUtility(self.__used_for__)
         reg_method = getattr(registry, self.register_method)
         unreg_method = getattr(registry, self.unregister_method)
         update_method = getattr(registry, self.update_method)
